# RuntGenAI

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_smoke_test.py  synthetic_dicom.py  test_calibration.py  test_coordinate_mapping.py  test_rad_dino.py  test_sliding_window.py  train_demo.py
src/: api.py  audit.py  calibration.py  confidence_localization.py  coordinate_mapping.py  cxr_rad_dino.py  deidentify.py  dicom_ingestion.py  explainability.py  inference.py  label_taxonomies.py  model_registry.py
src/training/: __init__.py  datamodule.py  lit_module.py  synthetic_dataset.py  train.py
tests/: conftest.py  test_math.py  test_pipeline_core.py  test_training.py
ui/: RadiologyIntake.jsx
